--- a/chromeos/config/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/x86_64/chromeos-intel-pineview.flavour.config
@@ -33,10 +33,8 @@ CONFIG_INTEL_PUNIT_IPC=y
 CONFIG_INTEL_RAPL=y
 CONFIG_INTEL_SOC_DTS_THERMAL=y
 CONFIG_INTEL_TELEMETRY=y
-CONFIG_IWL7000=m
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_MEDIA_CONTROLLER=y
-# CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_MFD_INTEL_LPSS_ACPI=y
 CONFIG_MFD_INTEL_LPSS_PCI=y
 CONFIG_MFD_TPS68470=y
@@ -44,6 +42,7 @@ CONFIG_MISC_RTSX_PCI=m
 CONFIG_MMC_REALTEK_PCI=m
 CONFIG_NR_CPUS=8
 CONFIG_PCI_MSI=y
+CONFIG_PHYLIB=y
 CONFIG_PINCTRL_BAYTRAIL=y
 CONFIG_PINCTRL_BROXTON=y
 CONFIG_PINCTRL_CANNONLAKE=y
@@ -54,7 +53,6 @@ CONFIG_PINCTRL_SUNRISEPOINT=y
 # CONFIG_RT2800PCI_RT33XX is not set
 # CONFIG_RT2800PCI_RT35XX is not set
 # CONFIG_RT2800PCI_RT53XX is not set
-CONFIG_RTC_DRV_WILCO_EC=m
 CONFIG_SND_HDA_CODEC_ANALOG=m
 CONFIG_SND_HDA_CODEC_CA0110=m
 CONFIG_SND_HDA_CODEC_CA0132=m
@@ -72,17 +70,20 @@ CONFIG_SND_SOC_INTEL_BYTCR_RT5640_MACH=m
 CONFIG_SND_SOC_INTEL_CHT_BSW_MAX98090_TI_MACH=m
 CONFIG_SND_SOC_INTEL_CHT_BSW_RT5645_MACH=m
 CONFIG_SND_SOC_INTEL_CHT_BSW_RT5672_MACH=m
+CONFIG_SND_SOC_INTEL_CML_H=m
+CONFIG_SND_SOC_INTEL_CML_LP=m
 CONFIG_SND_SOC_INTEL_CML_LP_DA7219_MAX98357A_MACH=m
-CONFIG_SND_SOC_INTEL_CNL_MAX98373_MACH=m
-CONFIG_SND_SOC_INTEL_CNL_RT274_MACH=m
 CONFIG_SND_SOC_INTEL_GLK_RT5682_MAX98357A_MACH=m
 CONFIG_SND_SOC_INTEL_KBL_DA7219_MAX98357A_MACH=m
+CONFIG_SND_SOC_INTEL_KBL_DA7219_MAX98927_MACH=m
+CONFIG_SND_SOC_INTEL_KBL_RT5660_MACH=m
 CONFIG_SND_SOC_INTEL_KBL_RT5663_MAX98927_MACH=m
 CONFIG_SND_SOC_INTEL_KBL_RT5663_RT5514_MAX98927_MACH=m
 CONFIG_SND_SOC_INTEL_SKL_NAU88L25_MAX98357A_MACH=m
 CONFIG_SND_SOC_INTEL_SKL_NAU88L25_SSM4567_MACH=m
 CONFIG_SND_SOC_INTEL_SKL_RT286_MACH=m
 CONFIG_SND_SOC_INTEL_SKYLAKE=m
+CONFIG_SND_SOC_INTEL_SKYLAKE_HDAUDIO_CODEC=y
 CONFIG_SND_SOC_INTEL_SOF_CML_RT1011_RT5682_MACH=m
 CONFIG_SND_SOC_INTEL_SOF_RT5682_MACH=m
 CONFIG_SND_SOC_SOF_ACPI=m
@@ -95,7 +96,6 @@ CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_TS3A227E=y
 CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_ACPI=m
 CONFIG_TCG_CR50_I2C=y
-CONFIG_TCG_CR50_SPI=y
 CONFIG_TOUCHSCREEN_RM_TS=y
 CONFIG_TPS68470_PMIC_OPREGION=y
 CONFIG_VIDEO_DW9714=m
@@ -106,7 +106,6 @@ CONFIG_WILCO_EC=m
 CONFIG_WILCO_EC_CHARGE_SCHEDULE=m
 CONFIG_WILCO_EC_DEBUGFS=m
 CONFIG_WILCO_EC_EVENTS=m
-CONFIG_WILCO_EC_KBD_BACKLIGHT=m
 CONFIG_WILCO_EC_TELEMETRY=m
 CONFIG_X86_INTEL_LPSS=y
 # CONFIG_X86_MCE_AMD is not set
