--- a/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
@@ -19,8 +19,8 @@ CONFIG_BT_HCIUART_QCA=y
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 CONFIG_COMMON_CLK_QCOM=y
-# CONFIG_COMMON_CLK_XGENE is not set
 CONFIG_CPUFREQ_DT=y
+CONFIG_DRM_MSM=y
 # CONFIG_DRM_MSM_HDMI_HDCP is not set
 CONFIG_DRM_TI_SN65DSI86=y
 CONFIG_EDAC=y
@@ -37,6 +37,7 @@ CONFIG_INTERCONNECT=y
 CONFIG_INTERCONNECT_QCOM=y
 CONFIG_INTERCONNECT_QCOM_SDM845=y
 CONFIG_MAILBOX=y
+CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
 CONFIG_MEMORY=y
 CONFIG_MFD_SPMI_PMIC=y
 CONFIG_MMC_SDHCI_MSM=y
@@ -46,10 +47,11 @@ CONFIG_PHY_QCOM_QUSB2=y
 CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 CONFIG_PINCTRL_SDM845=y
 CONFIG_PM_DEVFREQ_EVENT=y
+CONFIG_QCOM_A53PLL=y
 CONFIG_QCOM_AOSS_QMP=y
 CONFIG_QCOM_APCS_IPC=y
+CONFIG_QCOM_CLK_APCS_MSM8916=y
 CONFIG_QCOM_CLK_RPMH=y
-CONFIG_QCOM_COMMAND_DB=y
 # CONFIG_QCOM_EBI2 is not set
 CONFIG_QCOM_GENI_SE=y
 CONFIG_QCOM_LLCC=y
@@ -82,7 +84,6 @@ CONFIG_RPMSG_QCOM_SMD=y
 CONFIG_SCSI=y
 CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
-CONFIG_SCSI_UFS_PROVISION=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SDM_DISPCC_845=y
 CONFIG_SDM_GPUCC_845=y
@@ -103,3 +104,4 @@ CONFIG_VIDEOBUF2_MEMOPS=m
 CONFIG_VIDEOBUF2_V4L2=m
 CONFIG_VIDEOMODE_HELPERS=y
 CONFIG_VIDEO_QCOM_VENUS=m
+CONFIG_WATCHDOG_CORE=y
